--- a/Engine/ColorVision.Engine/Properties/Resources.ja.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ja.resx
@@ -1776,4 +1776,37 @@
   <data name="WavelengthNm" xml:space="preserve">
     <value>波長 [nm]</value>
   </data>
+  <data name="Scan" xml:space="preserve">
+    <value>走査</value>
+  </data>
+  <data name="Blue" xml:space="preserve">
+    <value>青色光</value>
+  </data>
+  <data name="fx" xml:space="preserve">
+    <value>色度×</value>
+  </data>
+  <data name="fy" xml:space="preserve">
+    <value>色度y</value>
+  </data>
+  <data name="fu" xml:space="preserve">
+    <value>色度u</value>
+  </data>
+  <data name="fv" xml:space="preserve">
+    <value>色度v</value>
+  </data>
+  <data name="CCT" xml:space="preserve">
+    <value>相関色温度（K）</value>
+  </data>
+  <data name="Ld" xml:space="preserve">
+    <value>主波長Ld(nm)</value>
+  </data>
+  <data name="ColorPurityPercent" xml:space="preserve">
+    <value>色純度（％）</value>
+  </data>
+  <data name="Lp" xml:space="preserve">
+    <value>ピーク波長Lp（nm）</value>
+  </data>
+  <data name="Ra" xml:space="preserve">
+    <value>演色評価数Ra</value>
+  </data>
 </root>
