--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -1776,4 +1776,37 @@
   <data name="WavelengthNm" xml:space="preserve">
     <value>Длина волны [нм]</value>
   </data>
+  <data name="Scan" xml:space="preserve">
+    <value>сканирование</value>
+  </data>
+  <data name="Blue" xml:space="preserve">
+    <value>Синий свет</value>
+  </data>
+  <data name="fx" xml:space="preserve">
+    <value>Цветность x</value>
+  </data>
+  <data name="fy" xml:space="preserve">
+    <value>цветность y</value>
+  </data>
+  <data name="fu" xml:space="preserve">
+    <value>Цветность u</value>
+  </data>
+  <data name="fv" xml:space="preserve">
+    <value>Цветность v</value>
+  </data>
+  <data name="CCT" xml:space="preserve">
+    <value>Коррелированная цветовая температура (К)</value>
+  </data>
+  <data name="Ld" xml:space="preserve">
+    <value>доминирующая длина волны Ld(нм)</value>
+  </data>
+  <data name="ColorPurityPercent" xml:space="preserve">
+    <value>Чистота цвета (%)</value>
+  </data>
+  <data name="Lp" xml:space="preserve">
+    <value>Пиковая длина волны Lp (нм)</value>
+  </data>
+  <data name="Ra" xml:space="preserve">
+    <value>Индекс цветопередачи Ra</value>
+  </data>
 </root>
