--- a/Engine/ColorVision.Engine/Properties/Resources.ja.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ja.resx
@@ -1809,4 +1809,22 @@
   <data name="Ra" xml:space="preserve">
     <value>演色評価数Ra</value>
   </data>
+  <data name="CancelAutoTest" xml:space="preserve">
+    <value>自動テストをキャンセルする</value>
+  </data>
+  <data name="ExecutionComplete" xml:space="preserve">
+    <value>実行が完了しました</value>
+  </data>
+  <data name="ExecutionFailed" xml:space="preserve">
+    <value>実行に失敗しました</value>
+  </data>
+  <data name="执行失败" xml:space="preserve">
+    <value>実行に失敗しました</value>
+  </data>
+  <data name="Opening" xml:space="preserve">
+    <value>オープニング</value>
+  </data>
+  <data name="Closing" xml:space="preserve">
+    <value>閉鎖</value>
+  </data>
 </root>
