--- a/Engine/ColorVision.Engine/Properties/Resources.fr.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.fr.resx
@@ -1827,4 +1827,7 @@
   <data name="Closing" xml:space="preserve">
     <value>Fermé</value>
   </data>
+  <data name="Lv" xml:space="preserve">
+    <value>Luminosité Lv (cd/m2)</value>
+  </data>
 </root>
