--- a/Engine/ColorVision.Engine/Properties/Resources.ja.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ja.resx
@@ -1827,4 +1827,7 @@
   <data name="Closing" xml:space="preserve">
     <value>閉鎖</value>
   </data>
+  <data name="Lv" xml:space="preserve">
+    <value>明るさLv（cd/m2）</value>
+  </data>
 </root>
