--- a/Engine/ColorVision.Engine/Properties/Resources.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.resx
@@ -1827,4 +1827,7 @@
   <data name="Closing" xml:space="preserve">
     <value>关闭中</value>
   </data>
+  <data name="Lv" xml:space="preserve">
+    <value>亮度Lv(cd/m2)</value>
+  </data>
 </root>
