--- a/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
@@ -1827,4 +1827,7 @@
   <data name="Closing" xml:space="preserve">
     <value>關閉中</value>
   </data>
+  <data name="Lv" xml:space="preserve">
+    <value>亮度Lv(cd/m2)</value>
+  </data>
 </root>
